--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <h1 class="intro__header-title">Путешествия по России</h1>
                     <p class="intro__header-text">Настоящая страна не в выпусках новостей, а здесь.</p>
                 </div>
-                <img src="assets/intro.svg" class="intro__image">
+                <img src="assets/intro.svg" alt="" class="intro__image">
                 <p class="intro__shelf">ваша полка — верхняя</p>
             </div>
 
